be/src/common/global-flags.cc
@@ -378,7 +378,7 @@ DEFINE_bool(pull_table_types_and_comments, false,
     "catalogd-only flag. Required if users want GET_TABLES requests return correct table "
     "types or comments.");
 
-DEFINE_bool(tolerate_statestore_startup_delay, false, "If set to true, the subscriber "
+DEFINE_bool(tolerate_statestore_startup_delay, true, "If set to true, the subscriber "
     "is able to tolerate the delay of the statestore's availability. The subscriber's "
     "process will not exit if it cannot register with the specified statestore on "
     "startup. But instead it enters into Recovery mode, it will loop, sleep and retry "
